[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "archlab"
version = "0.1.0"
description = "Event-driven distributed systems simulator for capacity planning and bottleneck detection"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
web = ["fastapi", "uvicorn[standard]"]

[project.scripts]
archlab = "archlab.__main__:main"

[tool.setuptools.packages.find]
include = ["archlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
